--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "css-loader": "^0.23.1",
+    "eslint-plugin-react": "^3.16.1",
     "http-server": "^0.8.5",
     "jsx-loader": "^0.13.2",
     "style-loader": "^0.13.0",
