--- a/package.json
+++ b/package.json
@@ -4,24 +4,28 @@
   "private": true,
   "scripts": {
     "build": "webpack",
+    "build:assets": "babel-node tools/build-assets",
+    "prebuild": "npm run build:assets",
     "start": "webpack-dev-server --content-base build"
   },
   "dependencies": {
-    "react": "^0.14.6",
-    "react-dom": "^0.14.6"
-  },
-  "devDependencies": {
     "babel-core": "^6.4.5",
     "babel-loader": "^6.2.1",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "css-loader": "^0.23.1",
+    "eslint-loader": "^1.3.0",
     "eslint-plugin-react": "^3.16.1",
     "http-server": "^0.8.5",
     "jsx-loader": "^0.13.2",
+    "react": "^0.14.6",
+    "react-dom": "^0.14.6",
     "style-loader": "^0.13.0",
     "stylus-loader": "^1.5.1",
     "webpack": "^1.12.12",
     "webpack-dev-server": "^1.14.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.6.5"
   }
 }
