--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "css-loader": "^0.23.1",
+    "eslint": "^1.10.3",
     "eslint-loader": "^1.3.0",
     "eslint-plugin-react": "^3.16.1",
     "http-server": "^0.8.5",
